Day five, and six

--- a/learning/learning/Views/Department/Index.cshtml
+++ b/learning/learning/Views/Department/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model List<Department>
+<a asp-action="Create" asp-controller="Department" class="btn btn-success">Create</a>
+
 <table class="table table-bordered table-hover">
+
     <thead>
     <th>Department Id</th>
     <th>Department Name</th>
