--- a/learning/learning/Views/Student/Create.cshtml
+++ b/learning/learning/Views/Student/Create.cshtml
@@ -1,9 +1,19 @@
-﻿<form method="post" action="/Student/Create">
-    <label for="Name">Student Name</label>
-    <input type="text" name="Name" />
+﻿@model Student
+<form method="post" action="/Student/Create">
+    <div>
+    <label asp-for="Name" ></label>
+    <input asp-for="Name" />
+        <span asp-validation-for="Name" class="alert-danger"></span>
+    </div>
     <br />
-    <label for="Address">Address</label>
-    <input type="text" name="Address" />
+    <div>
+    <label asp-for="Address"></label>
+    <input asp-for="Address" />
+    <span asp-validation-for="Address" class="alert-danger"></span>
+    </div>
     <br />
     <input type="submit" value="Create" />
 </form>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
